@@ -281,3 +281,16 @@ task updateMindustryVersion (dependsOn: [classes, configurations.runtimeClasspat
         }
     }
 }
+task checkJitPack(dependsOn: [jar,classes, configurations.runtimeClasspath], type: JavaExec){
+    doFirst {
+        javaexec {
+            maxHeapSize = "4048m"
+            args("-Xmx4048m", "--enable-preview", mindustryVersion)
+            main = "mma.tools.updateVersion.MindustryVersionUpdater"
+            classpath = sourceSets.main.runtimeClasspath
+            workingDir = "../"
+//            jvmArgs ("-Xmx2024m")
+//            systemProperties("-Xmx2024m")
+        }
+    }
+}
